# rover_5k

./: CMakeLists.txt  README.md  package.xml  명령어.txt
env-hooks/: rover_5k.dsv.in  rover_5k.sh.in
model/block/: block.dae  block.sdf  model.config
model/block/materials/scripts/: script.material
model/block2/: block2.dae  block2.sdf  model.config
model/block3/: block3.dae  block3.sdf  model.config
model/crater/: model.config  model.sdf
model/kari_map/: 0719.dae  0719.sdf  model.config
model/moon/: model.config  model.sdf  moonSurface.dae
model/mountain/: model.config  mountain.dae  mountain.sdf
model/mountain/materials/scripts/: script.material
model/rover/: model.config  rover_5k.sdf
model/rover/dae/: body.dae  gearwheel.dae
model/rover/materials/scripts/: script.material
model/rover_lidar/: model.config  rover_lidar.sdf
src/: climb_crater.cpp  follow_wall.cpp  moving_rover.cpp
world/: Basic.world  ClimbCrater.world  FollowWall.world
